// =======================
// ENUMERATIONS
// =======================
Enum order_status {
  PENDING
  PROCESSING
  COMPLETED
  CANCELLED
  RETURNED
  REFUNDED
}

Enum product_status {
  ACTIVE
  HIDDEN
  DELETED
}

Enum user_status {
  ACTIVE
  BLOCKED
  DELETED
}

Enum coupon_status {
  ACTIVE
  INACTIVE
  DELETED
}

Enum coupon_type {
  PERCENT
  FIXED
}

Enum payment_method_type {
  CASH
  DIGITAL
}
Enum payment_status {
  PENDING
  PAID
  FAILED
  REFUNDED
}

Enum payment_provider {
  COD
  VNPAY
  MOMO
}

Enum payment_transaction_type {
  PAYMENT
  REFUND
}

Enum payment_transaction_status {
  PENDING
  SUCCESS
  FAILED
  REFUNDED
}

Enum return_request_type {
  RETURN
  EXCHANGE
  WARRANTY
}
Enum return_request_status {
  PENDING
  APPROVED
  COMPLETED
  REJECTED
  CANCELLED
}

Enum warehouse_transaction_type {
  INTERNAL_TRANSFER
  RESERVED
  IMPORT
  EXPORT
  RETURN
  UNRESERVED
}
Enum warehouse_transaction_status {
  PENDING
  COMPLETED
  FAILED
  CANCELLED
  DELETED
}

Enum shipping_provider {
  GHN
  GHTK
  VIETTELPOST
  VNPOST
  OTHER
}

Enum shipping_status {
  PENDING
  SHIPPING
  DELIVERED
  RETURNED
  CANCELLED
}

Enum warehouse_status {
  ACTIVE
  INACTIVE
  DELETED
}

Enum gender_type {
  MALE
  FEMALE
  OTHER
  PREFER_NOT_TO_SAY
}

// =======================
// CORE TABLES
// =======================

Table products {
  id int [pk, increment]
  name varchar(255) [not null]
  slug varchar(255) [unique, not null]
  category_id int [Ref: > categories.id, not null]
  brand_id int [Ref: > brands.id, not null]
  description text
  specs_json json
  rating_star decimal(2,1) [default: 0, not null]
  rating_count int [default: 0, not null]
  warranty_months int [default: 0, not null]
  status product_status [default: product_status.ACTIVE, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]

  checks {
    `rating_star >= 0 AND rating_star <= 5` [name: "chk_rating_star_range"]
    `rating_count >= 0` [name: "chk_rating_count_non_negative"]
    `warranty_months >= 0` [name: "chk_warranty_months_non_negative"]
  }
}

Table variants {
  id int [pk, increment]
  product_id int [Ref: > products.id, not null]
  name varchar(255) [not null]
  slug varchar(255) [unique, not null]
  color varchar(50)
  specs_json json
  price decimal(12,3) [not null]
  total_stock int [not null]
  status product_status [default: product_status.ACTIVE, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]

  checks {
    `price >= 0` [name: "chk_price_non_negative"]
    `stock >= 0` [name: "chk_stock_non_negative"]
  }
}

Table media {
  id int [pk, increment]
  product_id int [Ref: > products.id]
  variant_id int [Ref: > variants.id]
  image_url varchar(255) [not null]
  is_primary bool [default: false, not null]
  display_order int [default: 0, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]
}

Table users {
  id int [pk, increment]
  full_name varchar(100) [not null]
  gender gender_type [default: gender_type.PREFER_NOT_TO_SAY, not null]
  date_of_birth date
  username varchar(25) [unique, not null]
  avatar_url varchar(255)
  email varchar(255) [unique, not null]
  phone_number varchar(10) [unique, not null]
  hashed_password varchar(60) [not null] //BCrypt
  status user_status [default: user_status.ACTIVE, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]
}

Table staffs {
  id int [pk, increment]
  full_name varchar(100) [not null]
  gender gender_type [not null]
  date_of_birth datetime
  username varchar(25) [not null]
  avatar_url varchar(255)
  email varchar(255) [not null]
  phone_number varchar(10) [not null]
  address varchar(255) [not null]
  role_id int [Ref: > roles.id, not null]
  hashed_password varchar(60) [not null] //BCrypt
  status user_status [default: user_status.ACTIVE, not null]
  assigned_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]
}

Table addresses {
  id int [pk, increment]
  user_id int [Ref: > users.id, not null]
  label varchar(50) [not null] //Home, Work, etc.
  line varchar(255) [not null]
  ward varchar(50) [not null]
  district varchar(50) [not null]
  province varchar(50) [not null]
  note text
  is_default bool [default: false, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]
}

Table roles {
  id int [pk, increment]
  name varchar(50) [unique, not null]
  status user_status [default: user_status.ACTIVE, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]
}

Table permissions {
  id int [pk, increment]
  code varchar(50) [unique, not null] //Naming convention: PRODUCT_VIEW, PRODUCT_CREATE, PRODUCT_UPDATE, PRODUCT_DELETE, etc.
  name varchar(50) [unique, not null]
  description text
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]
}

Table categories {
  id int [pk, increment]
  name varchar(50) [not null]
  icon_url varchar(255)
  slug varchar(255) [unique, not null]
  parent_id int [Ref: > categories.id]
  status product_status [default: product_status.ACTIVE, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]
}

Table brands {
  id int [pk, increment]
  name varchar(100) [unique, not null]
  image_url varchar(255)
  status product_status [default: product_status.ACTIVE, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]
}

Table coupons {
  id int [pk, increment]
  category_id int [Ref: > categories.id]
  brand_id int [Ref: > brands.id]
  code varchar(20) [unique, not null]
  type coupon_type [not null]
  value decimal(12,3)
  min_order decimal(12,3)
  start_date datetime [not null]
  end_date datetime [not null]
  usage_limit int
  max_discount decimal(12,3)
  status coupon_status [coupon_status.ACTIVE, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]

  checks {
    `value > 0` [name: "chk_value_non_negative"]
    `min_order >= 0` [name: "chk_min_order_non_negative"]
    `usage_limit > 0` [name: "chk_usage_limit_non_negative"]
  }
}

Table carts {
  id int [pk, increment]
  user_id int [Ref: - users.id, unique, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]
}

Table orders {
  id int [pk, increment]
  user_id int [Ref: > users.id, not null]
  coupon_id int [Ref: > coupons.id]
  code varchar(20) [unique, not null]
  shipping_name varchar(100) [not null]
  shipping_phone varchar(10) [not null]
  shipping_line varchar(255) [not null]
  shipping_ward varchar(50) [not null]
  shipping_district varchar(50) [not null]
  shipping_province varchar(50) [not null]
  tracking_code varchar(20) [unique]
  status order_status [default: order_status.PENDING, not null]
  payment_method payment_method_type [not null]
  payment_status payment_status [default: payment_status.PENDING, not null]
  discount decimal(12,3) [default: 0, not null]
  shipping_fee decimal(12,3) [not null]
  subtotal decimal(12,3) [not null]
  total decimal(12,3) [not null]
  note text
  shipping_provider shipping_provider [not null]
  shipping_status shipping_status [default: shipping_status.PENDING, not null]
  paid_at datetime
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]

  checks {
    `discount >= 0` [name: "chk_discount_non_negative"]
    `discount <= subtotal` [name: "chk_discount_smaller_or_equal_subtotal"]
    `shipping_fee >= 0` [name: "chk_shipping_fee_non_negative"]
    `subtotal >= 0` [name: "chk_subtotal_non_negative"]
    `total >= 0` [name: "chk_total_non_negative"]
  }
}

Table payment_transactions {
  id int [pk, increment]
  order_id int [Ref: > orders.id]
  return_request_id int [Ref: > return_requests.id]
  type payment_transaction_type [not null]
  provider payment_provider [not null]
  provider_payment_id varchar(255)
  amount decimal(12,3) [not null]
  note text
  status payment_transaction_status [default: payment_transaction_status.PENDING, not null]
  payment_time datetime
  payload_json json
  created_at datetime [default: `now()`, not null]

  checks {
    `amount > 0` [name: "chk_amount_positive"]
  }
}

Table return_requests {
  id int [pk, increment]
  user_id int [Ref: > users.id, not null]
  order_id int [Ref: > orders.id, not null]
  variant_id int [Ref: > variants.id, not null]
  quantity int [not null]
  handled_by_staff_id int [Ref: > staffs.id]
  type return_request_type [not null]
  reason text [not null]
  refund_amount decimal(12,3) [not null]
  refund_method payment_method_type [not null]
  evidence_json json
  status return_request_status [default: return_request_status.PENDING, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]
  resolved_at datetime

  checks {
    `quantity > 0` [name: "chk_quantity_positive"]
    `refund_amount >= 0` [name: "chk_refund_amount_non_negative"]
  }
}

Table reviews {
  id int [pk, increment]
  product_id int [Ref: > products.id, not null]
  user_id int [Ref: > users.id, not null]
  order_id int [Ref: > orders.id, not null]
  rating_star int [not null]
  content text
  photos_json json
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]

  checks {
    `rating_star >= 1 AND rating_star <= 5` [name: "chk_rating_star_range"]
  }
}

Table warehouses {
  id int [pk, increment]
  name varchar(255) [not null]
  line varchar(255) [not null]
  ward varchar(50) [not null]
  district varchar(50) [not null]
  province varchar(50) [not null]
  capacity int [not null]
  current_stock int [default: 0, not null]
  status warehouse_status [default: warehouse_status.ACTIVE, not null]
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]

  checks {
    `capacity >= 0` [name: "chk_capacity_non_negative"]
    `current_stock >= 0` [name: "chk_current_stock_non_negative"]
    `current_stock <= capacity` [name: "chk_stock_within_capacity"]
  }
}

Table warehouse_transactions {
  id int [pk, increment]
  code varchar(20) [unique, not null]
  warehouse_id int [Ref: > warehouses.id, not null]
  staff_id int [Ref: > staffs.id, not null]
  order_id int [Ref: > orders.id]
  return_request_id int [Ref: > return_requests.id]
  type warehouse_transaction_type [not null]
  status warehouse_transaction_status [default: warehouse_transaction_status.PENDING, not null]
  note text
  created_at datetime [default: `now()`, not null]
  updated_at datetime [default: `now()`, not null]
}

Table invalidated_tokens {
  id varchar(255) [pk]
  expiry_time timestamp [not null]
  created_at datetime [default: `now()`, not null]
}

// =======================
// JOIN / RELATION TABLES
// =======================

Table warehouse_transaction_details {
  warehouse_transaction_id int [Ref: > warehouse_transactions.id, not null]
  variant_id int [Ref: > variants.id, not null]
  quantity int [not null]

  indexes {
    (warehouse_transaction_id, variant_id) [pk]
  }

  checks {
    `quantity > 0` [name: "chk_quantity_positive"]
  }
}

Table order_details {
  order_id int [Ref: > orders.id, not null]
  variant_id int [Ref: > variants.id, not null]
  price decimal(12,3) [not null]
  quantity int [not null]

  indexes {
    (order_id, variant_id) [pk]
  }

  checks {
    `price >= 0` [name: "chk_price_non_negative"]
    `quantity > 0` [name: "chk_quantity_positive"]
  }
}

Table cart_details {
  cart_id int [Ref: > carts.id, not null]
  variant_id int [Ref: > variants.id, not null]
  quantity int [not null]

  indexes {
    (cart_id, variant_id) [pk]
  }

  checks {
    `quantity > 0` [name: "chk_quantity_positive"]
  }
}

Table warehouse_details {
  warehouse_id int [Ref: > warehouses.id, not null]
  variant_id int [Ref: > variants.id, not null]
  quantity int [not null]

  indexes {
    (warehouse_id, variant_id) [pk]
  }

  checks {
    `quantity >= 0` [name: "chk_quantity_non_negative"]
  }
}

Table role_permissions {
  role_id int [Ref: > roles.id, not null]
  permission_id int [Ref: > permissions.id, not null]

  indexes {
    (role_id, permission_id) [pk]
  }
}
